--- a/ACL cable/src/acl/cable/FaultMaintenanceMachineCreate_1.fxml
+++ b/ACL cable/src/acl/cable/FaultMaintenanceMachineCreate_1.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="258.0" prefWidth="616.0" style="-fx-background-color: aabbcc;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="246.0" prefWidth="616.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane layoutX="-1.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="258.0" prefWidth="618.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="-1.0">
+      <BorderPane layoutX="-1.0" prefHeight="246.0" prefWidth="618.0" style="-fx-background-color: #aabbcc;" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="-1.0">
          <center>
             <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="261.0" prefWidth="487.0" BorderPane.alignment="CENTER">
                <children>
@@ -48,7 +48,7 @@
             </AnchorPane>
          </center>
          <right>
-            <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="262.0" prefWidth="131.0" BorderPane.alignment="CENTER">
+            <BorderPane prefHeight="262.0" prefWidth="131.0" BorderPane.alignment="CENTER">
                <top>
                   <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="EL/0034" textAlignment="RIGHT" BorderPane.alignment="CENTER">
                      <font>
